feat: add pgsql placeholder
