# docs/swagger.json
@@ -104,8 +104,8 @@
                 "summary": "Get a placeholder",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Placeholder ID",
+                        "type": "string",
+                        "description": "Placeholder UUID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -257,10 +257,7 @@
                 "operationId": "healthz-liveness",
                 "responses": {
                     "200": {
-                        "description": "ok",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response-bool"
-                        }
+                        "description": "ok"
                     }
                 }
             }
@@ -275,7 +272,7 @@
                     "500": {
                         "description": "panic",
                         "schema": {
-                            "$ref": "#/definitions/response.Response-string"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -297,10 +294,7 @@
                 "operationId": "healthz-rediness",
                 "responses": {
                     "200": {
-                        "description": "ok",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response-string"
-                        }
+                        "description": "ok"
                     }
                 }
             }
@@ -322,10 +316,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response-string"
-                        }
+                        "description": "ok"
                     }
                 }
             }
@@ -374,38 +365,10 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "response.Response-bool": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "boolean"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "response.Response-string": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
                 }
             }
         }
